--- a/R/report.Rmd
+++ b/R/report.Rmd
@@ -14,6 +14,10 @@ knitr::opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE)
 knitr::opts_chunk$set(dev.args = list(png = list(type = "cairo")))
 ```
 
+```{r}
+readd(d3overview)
+```
+
 # TODO
 
 - [ ] Add parallelism
